argocd/manifests/nginx-gateway-settings/gateway.yaml
# need to set external IP manually in service to work

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: ghost-blog-listener
      hostname: "blog.lutergs.dev"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: lutergs-https-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: ghost-blog-admin-listener
      hostname: "blog-admin.lutergs.dev"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: lutergs-https-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: ente-museum-listener
      hostname: "ente.lutergs.dev"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: lutergs-https-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: ente-webapp-photos-listener
      hostname: "photo.lutergs.dev"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: lutergs-https-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: ente-webapp-accounts-listener
      hostname: "ente-accounts.lutergs.dev"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: lutergs-https-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: ente-webapp-auth-listener
      hostname: "ente-auth.lutergs.dev"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: lutergs-https-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: ente-webapp-cast-listener
      hostname: "ente-cast.lutergs.dev"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: lutergs-https-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: ente-webapp-albums-listener
      hostname: "ente-albums.lutergs.dev"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: lutergs-https-tls
      allowedRoutes:
        namespaces:
          from: All
